Fixed not being able to refresh site on mobile from "overflow: hidden" in body

--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@ body {
     font-family: 'Arial';
     margin: 0;
     box-sizing: border-box;
-    overflow: hidden;
 }
 button {
     background-color: rgb(53, 53, 53);
